# requirements-txt-fixer

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  requirements_txt_fixer.py  setup.cfg
tests/: requirements_txt_fixer_test.py
