[metadata]
name = requirements_txt_fixer
version = 1.0.0
description = Tool for fix requirements txt files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matiasr2503/requirements-txt-fixer
author = Roberto Matias
author_email = mra_15_2@hotmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = requirements_txt_fixer
python_requires = >=3.7

[options.entry_points]
console_scripts =
    reorder-python-imports = requirements_txt_fixer:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false